<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rslidar_driver</name>
  <version>2.0.0</version>
  <description>segmentation</description>

  <maintainer email="tony.zhang@robosense.cn">Tony</maintainer>
  <author>Tony Zhang</author>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>diagnostic_updater</depend>
  <depend>rslidar_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>libpcl1-dev</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
