<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rslidar_pointcloud_stamped</name>
  <version>1.0.1</version>
  <description>
    Point cloud conversions for rslidar 3D LIDARs with each point time-stamped.
  </description>
  <maintainer email="kubelvla@gmail.com">Vladimir</maintainer>

  <author>Vladimir Kubelka</author>
  <author>Tony Zhang</author>
  <author>George Wang</author>
  <author>Piyush Khandelwal</author>
  <author>Jesse Vera</author>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>rslidar_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
